# ProjektCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  wymagania.md
lib/: Shapes.cpp  Shapes.h
